# AEVOR

./: .gitignore  BREAKDOWN.MD  BREAKDOWN_FUNCTION_DEPENDENCIES_GUIDELINE.md  BREAKDOWN_GUIDELINE.md  BREAKDOWN_RELATIONSHIPS.md  BREAKDOWN_RELATIONSHIPS_GUIDELINE.md  CROSS-MODULE_FUNCTION_DEPENDENCY_ANALYSIS.md  CROSS-MODULE_FUNCTION_DEPENDENCY_ANALYSIS_GUIDELINE.md  Cargo.toml  ISSUE_TRACKER.md  Project-Structure-Overview.md  Project-Structure.md  README.md  REMOVED.md  Tokenomics.md  WHITEPAPER.md  new-project-structure-overview.md  new-project-structure.md  new-whitepaper-updated.md  new-whitepaper.md  test_aevor.sh
aevor-api/: Cargo.toml
aevor-api/src/: lib.rs  main.rs
aevor-api/src/auth/: mod.rs
aevor-api/src/graphql/: mod.rs
aevor-api/src/grpc/: mod.rs
aevor-api/src/middleware/: mod.rs
aevor-api/src/network_routing/: mod.rs
aevor-api/src/privacy_responses/: mod.rs
aevor-api/src/rate_limiting/: mod.rs
aevor-api/src/rest/: mod.rs
aevor-api/src/types/: mod.rs
aevor-api/src/versioning/: mod.rs
aevor-api/src/websocket/: mod.rs
aevor-bridge/: Cargo.toml
aevor-bridge/src/: lib.rs
aevor-bridge/src/assets/: mod.rs
aevor-bridge/src/bridge/: mod.rs
aevor-bridge/src/evm/: mod.rs
aevor-bridge/src/message_queue/: mod.rs
aevor-bridge/src/metrics/: mod.rs
aevor-bridge/src/move_chain/: mod.rs
aevor-bridge/src/privacy/: mod.rs
aevor-bridge/src/relayer/: mod.rs
aevor-bridge/src/utxo/: mod.rs
aevor-bridge/src/verification/: mod.rs
aevor-cli/: Cargo.toml
aevor-cli/src/: lib.rs  main.rs
aevor-cli/src/args/: mod.rs
aevor-cli/src/config/: mod.rs
aevor-cli/src/context/: mod.rs
aevor-cli/src/governance/: mod.rs
aevor-cli/src/keys/: mod.rs
aevor-cli/src/network/: mod.rs
aevor-cli/src/node/: mod.rs
aevor-cli/src/output/: mod.rs
aevor-cli/src/status/: mod.rs
aevor-cli/src/tee/: mod.rs
aevor-cli/src/validator/: mod.rs
aevor-client/: Cargo.toml
aevor-client/src/: lib.rs
aevor-client/src/auth/: mod.rs
aevor-client/src/connection/: mod.rs
aevor-client/src/exec/: mod.rs
aevor-client/src/light_client/: mod.rs
aevor-client/src/multi_network/: mod.rs
aevor-client/src/privacy/: mod.rs
aevor-client/src/query/: mod.rs
aevor-client/src/signing/: mod.rs
aevor-client/src/subscription/: mod.rs
aevor-client/src/transaction/: mod.rs
aevor-client/src/transport/: mod.rs
aevor-client/src/verification/: mod.rs
aevor-config/: Cargo.toml
aevor-config/src/: lib.rs
aevor-config/src/consensus/: mod.rs
aevor-config/src/defaults/: mod.rs
aevor-config/src/deployment/: mod.rs
aevor-config/src/economics/: mod.rs
aevor-config/src/loader/: mod.rs
aevor-config/src/network/: mod.rs
aevor-config/src/privacy/: mod.rs
aevor-config/src/tee/: mod.rs
aevor-config/src/validation/: mod.rs
aevor-consensus/: Cargo.toml
aevor-consensus/src/: lib.rs
aevor-consensus/src/attestation/: mod.rs
aevor-consensus/src/byzantine/: mod.rs
aevor-consensus/src/checkpoint/: mod.rs
aevor-consensus/src/economics/: mod.rs
aevor-consensus/src/engine/: mod.rs
aevor-consensus/src/finality/: mod.rs
aevor-consensus/src/frontier/: mod.rs
aevor-consensus/src/security_levels/: mod.rs
aevor-consensus/src/slashing/: mod.rs
aevor-consensus/src/timing/: mod.rs
aevor-consensus/src/validator_set/: mod.rs
aevor-core/: Cargo.toml
aevor-core/src/: lib.rs
aevor-core/src/block/: mod.rs
aevor-core/src/consensus/: mod.rs
aevor-core/src/coordination/: mod.rs
aevor-core/src/crypto/: mod.rs
aevor-core/src/economics/: mod.rs
aevor-core/src/error/: mod.rs
aevor-core/src/execution/: mod.rs
aevor-core/src/hash/: mod.rs
aevor-core/src/network/: mod.rs
aevor-core/src/primitives/: mod.rs
aevor-core/src/privacy/: mod.rs
aevor-core/src/protocol/: mod.rs
aevor-core/src/state/: mod.rs
aevor-core/src/storage/: mod.rs
aevor-core/src/tee/: mod.rs
aevor-core/src/traits/: mod.rs
aevor-core/src/transaction/: mod.rs
aevor-core/src/types/: mod.rs
aevor-core/src/validator/: mod.rs
aevor-crypto/: Cargo.toml
aevor-crypto/src/: lib.rs
aevor-crypto/src/acceleration/: mod.rs
aevor-crypto/src/account/: mod.rs
aevor-crypto/src/agility/: mod.rs
aevor-crypto/src/attestation/: mod.rs
aevor-crypto/src/bls/: mod.rs
aevor-crypto/src/commitment/: mod.rs
aevor-crypto/src/encryption/: mod.rs
aevor-crypto/src/hash/: mod.rs
aevor-crypto/src/keys/: mod.rs
aevor-crypto/src/merkle/: mod.rs
aevor-crypto/src/post_quantum/: ml_dsa.rs  mod.rs
aevor-crypto/src/primitives/: mod.rs
aevor-crypto/src/proofs/: mod.rs  pedersen.rs
aevor-crypto/src/signatures/: mod.rs
aevor-crypto/src/tee/: mod.rs  nitro.rs  nitro_device.rs
aevor-dag/: Cargo.toml
aevor-dag/src/: lib.rs
aevor-dag/src/conflict/: mod.rs
aevor-dag/src/dependency/: mod.rs
aevor-dag/src/frontier/: mod.rs
aevor-dag/src/macro_dag/: mod.rs
aevor-dag/src/metrics/: mod.rs
aevor-dag/src/micro_dag/: mod.rs
aevor-dag/src/ordering/: mod.rs
aevor-dag/src/parallel/: mod.rs
aevor-dag/src/speculative/: mod.rs
aevor-dag/src/storage/: mod.rs
aevor-execution/: Cargo.toml
aevor-execution/src/: lib.rs
aevor-execution/src/aggregation/: mod.rs
aevor-execution/src/composed/: mod.rs
aevor-execution/src/context_factory/: mod.rs
aevor-execution/src/cross_contract/: mod.rs
aevor-faucet/: Cargo.toml
aevor-faucet/src/: lib.rs  main.rs
aevor-faucet/src/faucet/: mod.rs
aevor-governance/: Cargo.toml
aevor-governance/src/: lib.rs
aevor-metrics/: Cargo.toml
aevor-metrics/src/: lib.rs
aevor-move/: Cargo.toml
aevor-move/src/: lib.rs
aevor-network/: Cargo.toml
aevor-network/src/: lib.rs
aevor-ns/: Cargo.toml
aevor-ns/src/: lib.rs
aevor-security/: Cargo.toml
aevor-security/src/: lib.rs
aevor-storage/: Cargo.toml
aevor-storage/src/: lib.rs
aevor-tee/: Cargo.toml
aevor-tee/src/: lib.rs
aevor-vm/: Cargo.toml
aevor-vm/src/: lib.rs
aevor-wallet/: Cargo.toml
aevor-wallet/src/: lib.rs
aevor-zk/: Cargo.toml
aevor-zk/src/: lib.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs
node/tests/: benchmarks.rs  end_to_end.rs
(+335 files in other folders)
