[package]
name = "aevor-api"
description = "AEVOR API server: REST, gRPC, WebSocket, GraphQL — infrastructure primitive access with privacy-aware responses"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aevor-api"
path = "src/main.rs"

[dependencies]
aevor-core      = { workspace = true }
aevor-crypto    = { workspace = true }
aevor-tee       = { workspace = true }
aevor-consensus = { workspace = true }
aevor-storage   = { workspace = true }
aevor-execution = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
axum            = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
tonic           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
hex             = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["test-util"] }
