[package]
name = "aevor-bridge"
description = "AEVOR cross-chain bridge: TEE-secured EVM, UTXO, Move-chain bridges with privacy-preserving relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aevor-core      = { workspace = true }
aevor-crypto    = { workspace = true }
aevor-tee       = { workspace = true }
aevor-zk        = { workspace = true }
aevor-consensus = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
hex             = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
