[package]
name = "aevor-config"
description = "AEVOR node configuration: loading, validation, and defaults for all subsystems"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aevor-core  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
toml        = { workspace = true }
dirs        = { workspace = true }

[dev-dependencies]
serde_json  = { workspace = true }
