[package]
name = "aevor-core"
description = "AEVOR blockchain foundation types: primitives, consensus, execution, privacy, TEE, and network types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
hex         = { workspace = true }
blake3      = { workspace = true }
zeroize     = { workspace = true }
bincode     = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
