[package]
name = "aevor-crypto"
description = "AEVOR cryptographic primitives: BLAKE3, Ed25519, BLS12-381, ChaCha20-Poly1305, Merkle trees. NO homomorphic encryption."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aevor-core      = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
hex             = { workspace = true }
zeroize         = { workspace = true }
# Hashing
blake3          = { workspace = true }
sha2            = { workspace = true }
sha3            = { workspace = true }
# Signatures
ed25519-dalek   = { workspace = true }
# BLS12-381
blst            = { workspace = true }
# Encryption
chacha20poly1305 = { workspace = true }
aes-gcm         = { workspace = true }
# Key exchange
x25519-dalek    = { workspace = true }
# Key derivation
hkdf            = { workspace = true }
# RNG
getrandom       = { workspace = true }
rand            = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
