[package]
name = "aevor-security"
description = "AEVOR security infrastructure: threat detection, Byzantine analysis, TEE integrity, validator auth, DDoS/Sybil protection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aevor-core      = { workspace = true }
aevor-crypto    = { workspace = true }
aevor-tee       = { workspace = true }
aevor-consensus = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
getrandom       = { workspace = true }
hex             = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
