[package]
name = "aevor-tee"
description = "AEVOR TEE-as-a-Service: unified multi-platform TEE coordination across Intel SGX, AMD SEV, ARM TrustZone, RISC-V Keystone, AWS Nitro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aevor-core   = { workspace = true }
aevor-crypto = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
getrandom    = { workspace = true }
hex          = { workspace = true }
# Real AWS Nitro attestation (pure-Rust verifier — builds without the enclave):
ciborium     = { workspace = true }
p384         = { workspace = true }
p256         = { workspace = true }
ed25519-dalek = { workspace = true }
ecdsa        = { workspace = true }
x509-parser  = { workspace = true }
sha2         = { workspace = true }
# Producer side: the real NSM device interface (compiles anywhere, runs on Nitro):
aws-nitro-enclaves-nsm-api = { workspace = true }

[dev-dependencies]
bincode      = { workspace = true }
serde_json = { workspace = true }
