[package]
name = "aevor-vm"
description = "AEVOR VM: Double-DAG virtual machine with Move runtime, JIT, TEE integration, and mixed-privacy execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aevor-core      = { workspace = true }
aevor-crypto    = { workspace = true }
aevor-tee       = { workspace = true }
aevor-storage   = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
getrandom       = { workspace = true }
hex             = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
