[package]
name = "node"
description = "AEVOR Node: complete system orchestration integrating all 21 infrastructure crates into a production-ready blockchain node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aevor-node"
path = "src/main.rs"

[dependencies]
# Foundation
aevor-core      = { workspace = true }
aevor-config    = { workspace = true }
aevor-crypto    = { workspace = true }
aevor-tee       = { workspace = true }
# Core blockchain
aevor-consensus = { workspace = true }
aevor-dag       = { workspace = true }
aevor-storage   = { workspace = true }
aevor-vm        = { workspace = true }
aevor-execution = { workspace = true }
# Network + security
aevor-network   = { workspace = true }
aevor-security  = { workspace = true }
# Language + cross-chain
aevor-move      = { workspace = true }
aevor-zk        = { workspace = true }
aevor-bridge    = { workspace = true }
# Governance + naming
aevor-governance = { workspace = true }
aevor-ns        = { workspace = true }
# External interface
aevor-metrics   = { workspace = true }
aevor-api       = { workspace = true }
aevor-client    = { workspace = true }
aevor-cli       = { workspace = true }
# Final services
aevor-faucet    = { workspace = true }
# Runtime
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
clap            = { workspace = true }
dirs            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
toml            = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["test-util"] }
